static/css/modal.css
/* ... */
.ep_profile_modal_save{
    width: 111px;
    height: 48px !important;
    border: 0;
    background-color: #3873E0;
    color: white;
    margin: auto;
    float: right;
    /* display: flow-root; */
    margin: 23px 0 0 19px;
    border-radius: 4px;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
    /* identical to box height */

    align-items: center;
    text-align: center;
}
.ep_profile_modal_load_more_contributors{
    width: 111px;
    height: 48px!important;
    border: 0;
    background-color: #3873e0;
    color: #fff;
    margin: auto;
    border-radius: 4px;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
    /* align-items: center; */
    /* text-align: center; */
    padding:13px;
    display: flex;
    
}
.loadMoreContainer{
    width: 100%;
    margin-top: 5%;
    margin-bottom: 5%;
}
#ep_profile_modal_close_ask{
    color : "black" ;
    float: right;
    margin-right: 2%;
    font-size: 14pt;
    cursor: pointer;
    
}
#ep_profile_modal_close{
    cursor: pointer;
    background-image: url("../img/close.png");
    width: 14px;
	height: 14px;
	float: right;
	cursor: pointer;
}
.ep_profile_modal_validation_error {
    border-color: red !important;
}
.ep_profile_modal_pm_header{
    height: 51px;
    width: 100%;
}
.ep_profile_modal_pm_header_title{
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 22px;
    line-height: 26px;
    color: #000000;
    float: left;
}
.ep_prfile_close_icon{
    background-image: url("../img/close.png");
	width: 14px;
	height: 14px;
	float: right;
	cursor: pointer;
}
.ep_profile_modal_user_list{
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    width: 587px;
    max-height: 664px;
    background-color: #fff;
    position: absolute;

    /* top: 15%;
    right: 40.3%; */
    visibility: hidden;
        overflow: hidden;
    color: rgb(32, 33, 36);
    z-index: 500;
	transition: all .3s;
	/* border-radius: 0 0 6px 6px; */
	/* box-shadow: 1px 1px 4px rgb(87, 98, 115, .1); */
	/* border: 1px solid #e6e8e9; */
    font-size: 14px;
    transform: scale(.7);
    opacity: 0;
    transition: all .3s cubic-bezier(.74,-.05,.27,1.75);
    z-index: 9999;
    top: 0;
    bottom: 0;
    margin: auto;
    left: 0;
    right: 0;
    border-radius: 9px;
}
#ep_profile_modal_user_list_close{
    float: right;
    margin-top: 38px;
    margin-right: 31px;
    width: 14px;
    height: 14px;
    background-repeat: no-repeat;
}
.ep_profile_user_row{
    height: 69px;
    padding-left: 26px;
    padding-right: 26px;
    margin-top: 44px;
    margin-bottom: 45px;
    width: 100%;
}

/* .ep_profile_user_list_date_title{

} */
.ep_profile_contributors_scroll{
    overflow-y: scroll;
    height: 584px;
}
.ep_profile_user_list_date_title_header{
    width: 100%;
    height: 80px;
    border-bottom: 1px solid #000000;



}
.ep_profile_user_date_title{
    width: 100%;
    color: black;
    font-weight: bold;
    padding-left: 11px;
    padding-bottom: 5px;
    font-size: 16px;
    padding-top: 5px;

}
.ep_profile_header_of_contributors{
    padding-left: 26px;
    padding-bottom: 5px;
    padding-top: 32px;
    float: left;
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 22px;
    line-height: 26px;
    color: #000000;

}

.ep_profile_user_list_global_title{
    width: 100%;
    height: 40px;
    border: 1px solid gray;
    padding-left: 10px;
    padding-top: 10px;
    margin-bottom: 5px;
}
.ep_profile_user_img{

    float: left;
    height: 69px;
    width: 69px;
    border-radius: 145.833px;
}
.ep_profile_user_username{
   
    float: left;
    padding-left: 5%;
    padding-top: 0%;
    font-weight: 700;
 
}
.ep_profile_contributor_status{
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 13px;
    line-height: 134.19%;
    color: #848484;
    float: right;
    max-width: 130px;
    height: 17px;
    padding-top: 1px;
}
.ep_profile_user_list_container{
    height: auto;
    width: 100%;
}
.ep_profile_contributor_link_container{
    background-image: url("../img/link.png");
    width: 20px;
    height: 10px;
    margin-left: 9px;
    margin-top : 5px;
    float: left;

}
.ep_profile_user_list_username_text{
    max-width: 130px;
    overflow: hidden;
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
    align-items: center;
    color: #000000;
    word-break: break-all;
    float: left;


}
.ep_profile_user_list_username
{
    word-break: break-all;
    height: 22px;
    overflow: hidden;
    font-family: Roboto;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
    align-items: center;
    color: #000000;
    width: 100%;
    float: left;

}
.ep_profile_user_list_profile_userDesc{
    float: left;
    padding-left: 26px;
    width: 440px;
    /* margin-top: 20px;
    margin-left: 20px;
    width: 161px; */
}
.ep_profile_user_list_profile_desc {
    text-align: left;
    word-break: break-word;
    height: 50px;
    overflow: hidden;
    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 134.19%;
    padding-top: 5.5px;
    float: left;
    color: #474747;


}
.ep_profile_user_list_profile_homepage{
    text-align: left;
    word-break: break-all;
    height: 39px;
    overflow: hidden;
}
.ep_profile_user_list_container_off{
    /* margin-top: 5%;
    padding-top: 4%;
    border-top: 1px solid lightgray; */
    color: gray;
    width: 100%;
    height: auto;
}
/* ... */

